# robocar

./: .gitignore  LICENSE.txt  NOTICE.txt  README.md
docker/: Dockerfile  run.sh
src/libs/linefit_ground_segmentation/: CMakeLists.txt  package.xml
src/libs/linefit_ground_segmentation/include/ground_segmentation/: ground_segmentation.h
src/libs/linefit_ground_segmentation/src/: ground_segmentation.cc
src/libs/oscc/: CMakeLists.txt  LICENSE  OsccConfig.cmake  README.md  package.xml
src/libs/oscc/include/oscc/: oscc.h
src/libs/oscc/include/oscc/can_protocols/: steering_can_protocol.h
src/libs/oscc/include/oscc/vehicles/: oscc.dbc
src/libs/oscc/src/: oscc.c
src/libs/oscc/src/internal/: oscc.h
src/libs/ouster/: CMakeLists.txt  package.xml
src/libs/ouster/cmake/: FindEigen3.cmake
src/libs/ouster/ouster_viz/: CMakeLists.txt
src/libs/tfl_detector/: package.xml  setup.cfg  setup.py
src/libs/tfl_detector/tfl_detector/: detector.py
src/modules/common/: CMakeLists.txt  package.xml
src/modules/common/include/common/: common.h  geodesy.h  messages.h
src/modules/cycle/: CMakeLists.txt  package.xml
src/modules/cycle/include/cycle/: cycle.h
src/modules/cycle/include/cycle/messaging/: broker.h  message.h
src/modules/cycle/include/cycle/nodes/: config.h  module.h  service.h
src/modules/cycle/include/cycle/utils/: logging.h  time.h  utils.h
src/modules/drivers/: CMakeLists.txt  package.xml
src/modules/drivers/include/drivers/actuator/: actuator_component.h
src/modules/drivers/include/drivers/alexa/: alexa_component.h
src/modules/drivers/include/drivers/camera/: camera_component.h
src/modules/drivers/src/actuator/: actuator_component.cc
src/modules/drivers/src/alexa/: alexa_component.cc
src/modules/drivers/src/camera/: camera_component.cc
src/modules/drivers/src/gnss/: gsof_component.cc
src/modules/drivers/src/joystick/: joystick_component.cc
src/modules/drivers/src/lidar/: ouster_component.cc
src/modules/drivers/src/tod/: tod_component.cc
src/modules/msg_interfaces/: CMakeLists.txt  package.xml
src/modules/msg_interfaces/msg/: ActCmd.msg  ActStatus.msg  GNSS.msg  Localization.msg  LogEntry.msg  MapWaypoint.msg  Object2d.msg  Objects2d.msg  Path.msg  Planning.msg  TrafficLight.msg
src/modules/perception/: CMakeLists.txt  package.xml
src/modules/perception/include/perception/: lidar_component.h
src/modules/perception/src/: lidar_component.cc
src/modules/planning/: CMakeLists.txt  package.xml
src/modules/planning/include/planning/: planning_component.h
src/modules/planning/src/planning/: planning_component.cc
src/modules/simulation/: CMakeLists.txt  package.xml
src/modules/simulation/include/simulation/: sim_objects_agent.h  sim_objects_component.h  sim_vehicle_component.h
src/modules/simulation/src/simulation/: sim_objects_agent.cc  sim_objects_component.cc  sim_vehicle_component.cc
src/modules/startup/: CMakeLists.txt  package.xml
src/modules/startup/config/: robocar.json
src/modules/startup/launch/: robocar.launch
src/modules/startup/src/: main.cc
src/modules/vehicle/: CMakeLists.txt  package.xml
src/modules/vehicle/include/vehicle/: ma_filters.h  vehicle_component.h
src/modules/vehicle/src/vehicle/: vehicle_component.cc
src/modules/visualization/: CMakeLists.txt  package.xml
src/modules/visualization/config/: visualization.rviz
src/modules/visualization/include/visualization/: dashboard_component.h  visualization_component.h
src/modules/visualization/mesh/: low_poly_car.fbx
src/modules/visualization/src/: dashboard_component.cc  visualization_component.cc
src/robocar/: CMakeLists.txt  package.xml
src/robocar/config/: robocar.json  robocar.rviz
src/robocar/include/robocar/control/: control_component.h
src/robocar/include/robocar/core/: messages.h  robocar.h
src/robocar/include/robocar/localization/: localization_component.h
src/robocar/include/robocar/logging/: logging_component.h
src/robocar/include/robocar/map/: map_component.h  mapping_component.h
src/robocar/include/robocar/perception/: lidar_perception_component.h
src/robocar/include/robocar/planning/: planning_component.h
src/robocar/include/robocar/simulation/: sim_objects_agent.h  sim_objects_component.h  sim_vehicle_component.h
src/robocar/include/robocar/tod/: tod_component.h
src/robocar/include/robocar/vehicle/: vehicle_component.h
src/robocar/include/robocar/visualization/: dashboard_component.h  visualization_component.h
src/robocar/launch/: robocar.launch.py
src/robocar/maps/: 360lab.geojson  360lab2.geojson  adenauer.geojson  belval.geojson  belval2.geojson  cfc.geojson  cfc2.geojson  cfc3.geojson  creutzwald.geojson  kirchberg.geojson  kirchberg_geofeatures.geojson
src/robocar/src/: main.cc
src/robocar/src/control/: control_component.cc
src/robocar/src/drivers/actuator/: actuator_component.cc
src/robocar/src/drivers/alexa/: alexa_component.cc
src/robocar/src/drivers/camera/: camera_component.cc
src/robocar/src/drivers/gnss/: gsof_component.cc
src/robocar/src/drivers/joystick/: joystick_component.cc
src/robocar/src/drivers/lidar/: ouster_component.cc
src/robocar/src/localization/: localization_component.cc
src/robocar/src/logging/: logging_component.cc
src/robocar/src/map/: map_component.cc  mapping_component.cc
src/robocar/src/perception/: lidar_perception_component.cc
src/robocar/src/planning/: planning_component.cc
src/robocar/src/planning/mppi/: mppi.cc
src/robocar/src/simulation/: sim_objects_agent.cc  sim_objects_component.cc  sim_vehicle_component.cc
src/robocar/src/tod/: tod_component.cc
src/robocar/src/vehicle/: vehicle_component.cc
src/robocar/src/visualization/: dashboard_component.cc  visualization_component.cc
src/robocar_msgs/: CMakeLists.txt  package.xml
src/robocar_msgs/msg/: ActToggle.msg  AdToggle.msg  Localization.msg  Mapping.msg  Object3d.msg  Objects3d.msg  TargetSpeed.msg  Vehicle.msg  Waypoint.msg
src/robocar_tfl_detector/: dtld.yaml  package.xml  setup.cfg  setup.py
src/robocar_tfl_detector/robocar_tfl_detector/: detector.py
(+59 files in other folders)
