<package format="3">
  <name>robocar_msgs</name>
  <version>0.9.0</version>
  <description>RoboCar messages</description>
  <maintainer email="mehdi.testouri@uni.lu">Mehdi TESTOURI</maintainer>
  <maintainer email="gamal.elghazaly@uni.lu">Gamal ELGHAZALY</maintainer>
  <license>MIT</license>
  <url>https://github.com/sntubix/robocar</url>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>