<package>
  <name>robocar_tfl_detector</name>
  <version>0.9.0</version>
  <description>YOLOv8 based traffic light detector</description>
  <maintainer email="mehdi.testouri@uni.lu">Mehdi Testouri</maintainer>
  <maintainer email="gamal.elghazaly@uni.lu">Gamal ELGHAZALY</maintainer>
  <license>MIT</license>
  <url>https://github.com/sntubix/robocar</url>
  <buildtool_depend>ament_python</buildtool_depend>
  <run_depend>ros2launch</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robocar_msgs</run_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>