<package format="3">
  <name>oscc</name>
  <version>0.0.1</version>
  <description>Open Source Car Control.</description>
  <maintainer email="chenshj35@qq.com">Polysync</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>