<package>
  <name>tfl_detector</name>
  <version>0.0.1</version>
  <license>MIT</license>
  <description>Yolov8 based traffic light detection.</description>
  <maintainer email="mehdi.testouri@uni.lu">Mehdi Testouri</maintainer>  
  <buildtool_depend>ament_python</buildtool_depend>
  <run_depend>ros2launch</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>msg_interfaces</run_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>