<package format="3">
  <name>startup</name>
  <version>0.0.1</version>
  <description>Startup module</description>
  <author>Mehdi TESTOURI</author>
  <author>Gamal ELGHAZALY</author>
  <maintainer email="mehdi.testouri@uni.lu">Mehdi TESTOURI</maintainer>
  <maintainer email="gamal.elghazaly@uni.lu">Gamal ELGHAZALY</maintainer>
  <license>MIT</license>
  <url>https://gitlab.uni.lu/gelghazaly/robocar</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>common</depend>
  <depend>drivers</depend>
  <depend>vehicle</depend>
  <depend>control</depend>
  <depend>localization</depend>
  <depend>map</depend>
  <depend>perception</depend>
  <depend>planning</depend>
  <depend>visualization</depend>
  <depend>logging</depend>
  <depend>simulation</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>